<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Honours</string>
    <string name="action_settings">Settings</string>
    <string name="Convo">Conversations</string>
    <string name="phone_call">Phone Call</string>
    <string name="new_convo">New Conversation</string>
    <string name="Contacts">Contacts</string>
    <string name="contact_image">Contact Image</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_phone">Phone</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="call">Call</string>
    <string name="title_activity_conversation_thread">Conversation</string>
    <string name="delete">Delete</string>
    <string name="delete_convo">Delete Conversation</string>
    <string name="reset_keys">Reset Keys</string>
    <string name="encrpyt">Encrypt</string>
    <string name="Decrpyt">Decrypt</string>

    <!-- edit text hints -->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="enter_num">Enter Number</string>
    <string name="phone_num">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="enter_msg">Enter Message Here</string>

    <!-- Database fields -->
    <string name="db_fname">firstName</string>
    <string name="db_lname">lastName</string>
    <string name="db_contactId">contactID</string>
    <string name="db_phone">phone</string>
    <string name="db_email">email</string>
    <string name="db_address">address</string>
    <string name="db_notes">notes</string>
    <string name="db_threadId">threadID</string>
    <string name="db_messageId">messageID</string>
    <string name="db_msg">message</string>
    <string name="db_from">fromCon</string>
    <string name="db_time">time</string>
    <string name="db_read">read</string>
    <string name="db_fullname">fullName</string>
    <string name="db_encrypt">encrypt</string>
	<string name="db_keyPub">keyPub</string>
    <string name="db_keyPriv">keyPriv</string>
    <string name="db_keyUser">keyUser</string>
    <string name="db_keyCon">keyCon</string>
    <string name="db_key1">key1</string>
    <string name="db_key2">key2</string>
    <string name="db_key3">key3</string>
    <string name="db_key4">key4</string>
    <string name="db_keyInit">keyInit</string>

</resources>
