<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/newconvo_container" >

    <EditText
        android:id="@+id/new_convo_phone_num"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_num"
        android:inputType="phone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" >

        <Button
            android:id="@+id/choose_contact"
            android:text="@string/choose_contact"
            style="@style/large_buttons" />
        
        <FrameLayout
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:visibility="gone"
        	android:id="@+id/new_convo_contanier" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/new_convo_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_msg"
            android:inputType="textMultiLine" />

        <Button
            style="@style/small_buttons"
            android:id="@+id/new_convo_send"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>
