<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TextView 
    android:id="@+id/contact_edit_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >
        
        <ImageView
        android:id="@+id/contact_edit_image"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:src="@drawable/contact"
		android:contentDescription="@string/contact_image" />

        <EditText
            android:id="@+id/contact_edit_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/contact_edit_image"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/contact_edit_image"
            android:ems="10"
            android:hint="@string/fname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contact_edit_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contact_edit_fname"
            android:layout_below="@+id/contact_edit_fname"
            android:ems="10"
            android:hint="@string/lname"
            android:inputType="textPersonName" />
    
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingLeft="5dp" >
        
        <EditText
            android:id="@+id/contact_edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/phone_num" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >
        
        <EditText
            android:id="@+id/contact_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >
        
        <EditText
            android:id="@+id/contact_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:hint="@string/address" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"  >

    	<EditText
        	android:id="@+id/contact_edit_notes"
        	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
        	android:ems="10"
        	android:hint="@string/notes"
        	android:inputType="textMultiLine"
        	android:paddingLeft="10dp" />
    	
	</LinearLayout>



</LinearLayout>