<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/convo_thread_container"
    style="@style/match"
    tools:context="matt.honours.ConversationThreadActivity"
    tools:ignore="MergeRootFrame" >
    <RelativeLayout 
        style="@style/match_wrap"
        android:id="@+id/thread_top"
        android:background="#444444">
        <TextView
        	android:id="@+id/convo_thread_name"
        	style="@style/large_buttons_nm"
        	android:layout_alignParentTop="true"
        	android:paddingBottom="5dp"
        	android:paddingTop="5dp"
        	android:layout_centerHorizontal="true"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:textSize="20sp" />

        <CheckBox
            android:id="@+id/thread_encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/dim_5"
            android:text="@string/encrpyt"
            android:textColor="@color/white"
            android:button="@null"
			android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
        
    </RelativeLayout>
    

    <LinearLayout
            style="@style/match_wrap"
            android:id="@+id/convo_list_container"
            android:layout_below="@id/thread_top"
            android:layout_above="@+id/thread_bottom"
            android:orientation="horizontal"
>

        <ListView
            android:id="@+id/thread_list"
            style="@style/match_wrap"
            android:clickable="false"
            android:longClickable="false"
            android:stackFromBottom="true" >

        </ListView>
    
    </LinearLayout>

    <LinearLayout
        style="@style/match_wrap"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/thread_bottom" >

        <EditText
            android:id="@+id/convo_thread_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_msg"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/convo_thread_send"
            style="@style/small_buttons"
            android:text="@string/send" />

    </LinearLayout>



</RelativeLayout>

